[package]
name = "jaburepo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.26", features = ["blocking"]}
serde = { version = "1.0.197", features = ["derive"] }
serde-xml-rs = "0.6.0"
url = "2.5.0"

[dev-dependencies]
tempdir = "0.3.7"
